# QAForge

./: .env.example  .gitignore  README.md  behave.ini  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
config/: tags.json
config/environments/: dev.yaml  prod.yaml  staging.yaml
docker/: Dockerfile  docker-compose.yml
docs/manuals/: framework_manual.md
docs/technology_guides/: 01_playwright.md  02_rest_api.md  03_graphql_api.md  04_grpc_api.md  05_websocket_api.md  06_async_api.md  07_postgresql.md  08_mysql.md  09_mongodb.md  10_dynamodb.md  11_yaml_config.md  12_docker.md  13_faker.md  14_logging.md  15_additional_tools.md
features/: environment.py
features/ai/: llm_quality.feature
features/api/graphql/: users.feature
features/api/grpc/: users.feature
features/api/rest/: contract_validation.feature  pet_files_upload.feature  pet_management.feature  pet_store_orders.feature  user_management.feature  users.feature
features/api/websocket/: notifications.feature
features/database/: persistence.feature
features/steps/: actorfilm_loader.py  ai_steps.py  common_steps.py  db_steps.py  graphql_steps.py  grpc_steps.py  petstore_api_loader.py  rest_steps.py  ui_steps.py  ws_steps.py
features/ui/: form.feature  login.feature  navigation.feature
proto/: user_service.proto
scripts/: gen_grpc.sh  introspect_schema.py  run.sh
src/qaforge/: __init__.py
test_data/csv/: users_bulk.csv
test_data/static/: rag_corpus.json  schema_snapshot_mysql.json  schema_snapshot_postgres.json  seed_postgres.json  users.json
(+72 files in other folders)
